components:AdvantagesItem: style changes change blur to filter instead of another image as blur fix mobile alignment

--- a/src/components/atoms/AdvantagesItem/AdvantagesItem.scss
+++ b/src/components/atoms/AdvantagesItem/AdvantagesItem.scss
@@ -1,8 +1,16 @@
 @use '../../../assets/styles/utils' as u;
 
 $color-card-hover: var(--color-base-10);
+$color-img-shadow: rgb(206 9 255 / 50%);
 
 .advantages-item {
+  width: 215px;
+  padding: 30px;
+  border-radius: 16px;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
+
   i {
     position: relative;
     width: 50px;
@@ -12,21 +20,14 @@ $color-card-hover: var(--color-base-10);
     animation: iconscale 3s ease-in-out infinite;
   }
 
-  .blur {
-    filter: blur(50px);
-  }
-
   img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: contain;
+    inset-inline-start: 0;
+    filter: drop-shadow(2px 10px 15px $color-img-shadow);
   }
-
-  width: 215px;
-  padding: 30px;
-  border-radius: 16px;
-  transition: all 0.3s;
 
   &:hover {
     background: $color-card-hover;
@@ -52,16 +53,7 @@ $color-card-hover: var(--color-base-10);
 }
 @media screen and (max-width: 1050px) {
   .advantages-item {
-    i {
-      margin: 0 auto;
-    }
-
-    p {
-      text-align: center;
-    }
-
-    h4 {
-      text-align: center;
-    }
+    text-align: center;
+    place-items: center;
   }
 }
